Corretto errore visualizzazione impset

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                   onMouseDown="SCHEDA.iniziaMoveScheda(event);"
                                   onTouchStart="SCHEDA.iniziaMoveScheda(event);"></span>
                             <span class="elMenu" id="impostazioniArchivi"
-                                  onClick="MENU.visImpset(document.getElementById('elenchi_titolo').classList.contains('visSch')?true:false);"></span>
+                                  onClick="MENU.visImpset();"></span>
                         </div>
                     </div>
 					<div id="elenchi_lista">
