Correzione impaginazione richiesta PWD per mobile

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             	   onClick="LOGIN.pwd_confcode();"/>
                         </div>
                     	<div id="richiediConfcode">
-                        	<div id="btnRichiediConcode" onClick="LOGIN.pwd_recupero();">{{TXT_RichiediConfcode}} <b>&gt;</b></div>
+                        	<div id="btnRichiediConfcode" onClick="LOGIN.pwd_recupero();">{{TXT_RichiediConfcode}} <b>&gt;</b></div>
                         </div>
                     </form>
                 </div>
