--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <div id="menuScheda">
                     	<div id="addBtnMenu"></div>
-                        <div id="btnStampaScheda" onClick="SCHEDA.stampaScheda();">{{TXT_StampaScheda}}</div>
+                        <div id="btnStampaScheda" onClick="STAMPE.stampaScheda();">{{TXT_StampaScheda}}</div>
                         <div id="btnsFixScheda">
                             <span>{{TXT_AggancioScheda}}:</span>
                             <div id="sr0" class="lll" onClick="SCHEDA.aggancia('libera');">
@@ -1008,13 +1008,12 @@
                         <div id="p_login"><b id="nomeUtente">{{TXT_NessunUtente}}</b>  <span class="btn_invia" onClick="MENU.visLogin();" id="btn_login">LOGIN</span><span class="btn_invia" onClick="CONFIRM.vis(TXT('VuoiLogout')).then(function(pass){if(pass){LOGIN.logout();}});" id="btn_logout">{{TXT_LOGOUT}}</span><span onClick="LOGIN.modUtente();" id="btn_modut"></span><i id="utDisc">{{TXT_UtenteDisconnesso}}</i></div>
                         <span id="p_reg"><span>{{TXT_TestoRegistrazione}}</span><span class="btn_invia" onClick="MENU.visRegistrazione();" id="btn_registrazione">{{TXT_Registrati}}</span></span>
                         <div id="p_lingua">{{TXT_Lingua}}<span><i id="ico_infolingue" onClick="MENU.visInfolingue();">i</i><select id="lingueSelect" onChange="cambiaLingua(this.value);"></select></span></div>
-                        <div id="p_stampa" onClick="MENU.stampaStage();">{{TXT_StampaStage}}</div>
+                        <div id="p_stampa" onClick="STAMPE.stampaStage();">{{TXT_StampaStage}}</div>
                         <div id="p_notifiche" onClick="MENU.visNotifiche();"><span id="notificaMenu"></span>{{TXT_Notifiche}}</div>
                         <div id="p_colori" onClick="MENU.visColori();">{{TXT_Personalizzazione}}</div>
                         <div id="p_download" onClick="MENU.visBackups();">{{TXT_Download}}</div>
                         <div id="p_licenze" onClick="MENU.visLicenze();">{{TXT_TueLicenze}}</div>
                         <div id="p_purchases" onClick="MENU.visPurchases(true);">{{TXT_AcquistaLicenza}}</div>
-                        <div id="p_features" onClick="MENU.visFeatures(true);">{{TXT_NuoveCaratteristiche}}</div>
                     </div>
                 </div>
                 <div id="help"> <!-- MENU IMPOSTAZIONI -->
@@ -1023,6 +1022,7 @@
                     <div id="i1">
                         <div id="p_feedback" onClick="MENU.visFeedback();">{{TXT_Feedback}}</div>
                         <div id="p_guide" onClick="REF.open();MENU.visHelp();">{{TXT_ReferenceGuide}}</div>
+                        <div id="p_features" onClick="MENU.visFeatures(true);">{{TXT_NuoveCaratteristiche}}</div>
                         <div id="p_versione" onClick="MENU.visVersione();">{{TXT_Versione}}</div>
                     </div>
                 </div>
