Aggiunta pelle bianca

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
                 </p>
                <p id="skinSel">
                    <i>{{TXT_ScegliPelle}}:</i>
+                   <span class="p3" onClick="MODELLO.cambiaTipoPelle('_bianca');"></span>
                    <span class="p0" onClick="MODELLO.cambiaTipoPelle('');"></span>
                    <span class="p1" onClick="MODELLO.cambiaTipoPelle('_mulatta');"></span>
                    <span class="p2" onClick="MODELLO.cambiaTipoPelle('_nera');"></span>
