Aggiunta data di nascita al modulo di registrazione da mobile

--- a/index.html
+++ b/index.html
@@ -646,6 +646,9 @@
                             	    id="paeseRegistrazione"
                             	    placeholder="Paese"></select>
                         </div>
+                        <div id="datanascitaRegistrazione">
+                            <span>Data di nascita</span><input type="date" name="DataNascita" id="DataNascita">
+                        </div>
 
                         <div class="labelReg">{{TXT_LabelAggiuntive}}</div>
                     	<div>
